# PulseView-WinUI

./: .editorconfig  .gitignore  CMakeLists.txt  PulseView.WinUI.slnx  README.md  native-open-file-test.sr
docs/: .gitkeep  architecture.md  development.md  native-abi.md  porting-rules.md  rendering-model.md  slogic-combo8.md
eng/: build-app.ps1  build-native.ps1  build.ps1  check-env.ps1  common.ps1  install-msix.ps1  pack-msix.ps1  run.ps1  test.ps1  uninstall-dev-package.ps1
src/PulseView.App/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  PulseView.App.csproj  app.manifest
src/PulseView.App.Controls/: PulseView.App.Controls.csproj  WaveformPanel.cs
src/PulseView.App.NativeInterop/: .gitkeep  NativeAnalogSegment.cs  NativeDecoderAnnotation.cs  NativeDigitalSpan.cs  NativeException.cs  NativeLibraryInfo.cs  NativeMethods.cs  NativeRendererHandle.cs  NativeRenderingInfo.cs  NativeRenderingStatus.cs  NativeSession.cs  NativeSessionHandle.cs  NativeStatus.cs  NativeString.cs  NativeWaveformRenderer.cs  UsbDeviceDiagnostics.cs
src/PulseView.App.Tests/: NativeInteropTests.cs  PulseView.App.Tests.csproj  ShellViewModelTests.cs
src/PulseView.App.ViewModels/: CaptureDeviceOption.cs  CaptureSettings.cs  DemoCaptureSource.cs  HardwareTransport.cs  IHardwareDeviceProbe.cs  ISessionService.cs  ObservableObject.cs  PulseView.App.ViewModels.csproj  SessionInfo.cs  SessionService.cs  ShellViewModel.cs  ViewportScaleLadder.cs  WindowsHardwareDeviceProbe.cs
src/PulseView.App/Properties/: launchSettings.json
src/PulseView.Core.Native/: CMakeLists.txt
src/PulseView.Core.Native/include/pulseview/core/: session.h  version.h  viewport.h
src/PulseView.Core.Native/src/: session.cpp  version.cpp  viewport.cpp
src/PulseView.Core.Tests/: CMakeLists.txt
src/PulseView.Core.Tests/src/: native_bridge_tests.cpp
src/PulseView.NativeBridge/: CMakeLists.txt
src/PulseView.NativeBridge/include/pulseview/: native_bridge.h
src/PulseView.NativeBridge/src/: native_bridge.cpp
src/PulseView.Rendering.Native/: CMakeLists.txt
src/PulseView.Rendering.Native/include/pulseview/rendering/: renderer.h
src/PulseView.Rendering.Native/src/: renderer.cpp
tools/: README.md
